--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,50 @@
+version: '3.8'
+
 services:
-  db:
-    image: postgres:16.4
-    restart: always
+  saas-starter-kit:
+    build: .
+    container_name: saas-starter-kit
+    restart: unless-stopped
     environment:
-      POSTGRES_PASSWORD: admin
-      POSTGRES_USER: admin
-      POSTGRES_DB: saas-starter-kit
+      - NODE_ENV=production
+      - DATABASE_URL=postgresql://postgres:password@postgres:5432/saas_starter_kit
+      - NEXTAUTH_URL=http://localhost:4002
+      - NEXTAUTH_SECRET=KY3BKPHadMC1z9UpT4Rfnjn5RxzsnrMXhyuwWJ09BrE=
+      - STRIPE_SECRET_KEY=your-stripe-secret-key
+      - STRIPE_WEBHOOK_SECRET=your-stripe-webhook-secret
+      - SMTP_HOST=your-smtp-host
+      - SMTP_PORT=587
+      - SMTP_USER=your-smtp-user
+      - SMTP_PASSWORD=your-smtp-password
+      - RECAPTCHA_SITE_KEY=6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI
+      - RECAPTCHA_SECRET_KEY=6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe
+      - DISABLE_EMAIL_SIGNUP=false
+      - DISABLE_RECAPTCHA=true
     ports:
-      - 5432:5432
+      - "4002:4002"
+    depends_on:
+      - postgres
+    networks:
+      - saas-network
+
+  postgres:
+    image: postgres:15-alpine
+    container_name: saas-postgres
+    restart: unless-stopped
+    environment:
+      - POSTGRES_DB=saas_starter_kit
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=password
+    ports:
+      - "5433:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    networks:
+      - saas-network
+
+volumes:
+  postgres_data:
+
+networks:
+  saas-network:
+    driver: bridge
